--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.4"
+        "livewire/livewire": "^3.4",
+        "mollie/laravel-mollie": "^2.25",
+        "stripe/stripe-php": "^13.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
